--- a/package.json
+++ b/package.json
@@ -18,24 +18,25 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "babel-plugin-styled-components": "^2.0.6",
+    "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.10.3",
     "gatsby-plugin-image": "^2.10.1",
     "gatsby-plugin-mdx": "^3.10.2",
     "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-sharp": "^4.10.2",
-    "gatsby-plugin-styled-components": "^5.10.0",
+    "gatsby-plugin-styled-components": "^5.24.0",
     "gatsby-source-filesystem": "^4.10.1",
     "gatsby-transformer-sharp": "^4.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^7.32.0",
@@ -48,5 +49,8 @@
     "prettier": "^2.6.2",
     "prettier-eslint": "^14.0.1",
     "typescript": "^4.6.2"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
