добавить шрифт и сделать хедер

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "javid-asgarov",
-  "author": "Javid Askerov",
+  "author": "Javid Asgarov",
   "keywords": [
     "gatsby"
   ],
